fix: don't use gap in flexbox so as not to break older browsers

--- a/assets/css/nav/_left_nav.scss
+++ b/assets/css/nav/_left_nav.scss
@@ -11,25 +11,35 @@
 
   border-right: 1px solid $color-gray-300;
   padding: 1.5rem 1rem;
+
+  .m-left-nav__icon {
+    padding-right: 0.75rem;
+  }
 }
 
 .m-left-nav--collapsed {
   width: 4.25rem;
+
+  .m-left-nav__icon {
+    padding-right: 0;
+  }
 }
 
 .m-left-nav__links {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
   width: calc(100% + 1px);
   margin: 0;
+
+  :not(:last-child) {
+    padding-bottom: 0.5rem;
+  }
 }
 
 .m-left-nav__link {
   @include button-icon(1rem);
   display: flex;
   align-items: center;
-  gap: 0.75rem;
   padding: 0.5rem 0.625rem;
   box-sizing: border-box;
   width: 100%;
